# stripe-b2b-payments-api

./: README.md  env.example  pyproject.toml
app/: __init__.py  config.py  constants.py  dependencies.py  main.py
app/api/: auth.py  payments.py  refunds.py  subscriptions.py
app/core/: singleton.py
app/models/: payment.py  refund.py  subscription.py  user.py
app/services/: payment_service.py  refund_service.py  stripe_service.py  subscription_service.py
scripts/: create_recurring_price.py  create_test_data.py  simple_test.py  test_api.py
templates/: dashboard.html
