[tool.poetry]
name = "stripe-b2b-payments-api"
version = "0.1.0"
description = "B2B payments API with FastAPI and Stripe (payments, subscriptions, refunds)"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.111.0"
uvicorn = { version = "^0.30.0", extras = ["standard"] }
stripe = "^7.10.0"
jinja2 = "^3.1.2"
pydantic = "^2.7.0"
python-dotenv = "^1.0.1"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.0.0"
pytest = "^8.2.0"
mypy = "^1.10.0"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

